# frequency

./: README.md  frequency.cabal
src/Data/Frequency/: Hertz.hs  Megahertz.hs  Meters.hs
tests/: quickcheck.hs
